force-app/main/default/objects/AuthorizeNet_Config__mdt/AuthorizeNet_Config__mdt.object-meta.xml
<CustomObject>
    <label>AuthorizeNet Config</label>
    <pluralLabel>AuthorizeNet Configs</pluralLabel>
</CustomObject>