force-app/main/default/objects/AuthorizeNet_Config__mdt/fields/APILoginId__c.field-meta.xml
<CustomField>
    <fullName>APILoginId__c</fullName>
    <label>API Login ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>