force-app/main/default/objects/AuthorizeNet_Config__mdt/fields/PublicClientKey__c.field-meta.xml
<CustomField>
    <fullName>PublicClientKey__c</fullName>
    <label>Public Client Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>