force-app/main/default/objects/AuthorizeNet_Config__mdt/fields/UseSandbox__c.field-meta.xml
<CustomField>
    <fullName>UseSandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Sandbox</label>
    <type>Checkbox</type>
</CustomField>