force-app/main/default/objects/AuthorizeNet_Config__mdt/fields/WebhookSigningKey__c.field-meta.xml
<CustomField>
    <fullName>WebhookSigningKey__c</fullName>
    <label>Webhook Signing Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>